--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Flask==3.0.3
 pytest==8.3.3
 pytest-mock==3.14.0
+transformers==4.46.2
+torch==2.5.1
+pillow==11.0.0
+pdf2image==1.17.0
+pytesseract==0.3.13
+docx==0.2.4
