--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Flask==3.0.3
 pytest==8.3.3
 pytest-mock==3.14.0
 transformers==4.46.2
+datasets==3.1.0
+evaluate==0.4.3
 torch==2.5.1
 pillow==11.0.0
 pdf2image==1.17.0
@@ -9,4 +11,9 @@ pytesseract==0.3.13
 docx==0.2.4
 pandas==2.2.3
 faker==30.8.2
-scikit-learn==1.5.2
+openai==1.54.3
+python-dotenv==1.0.1
+PyPDF2==3.0.1
+python-docx==1.1.2
+gunicorn==23.0.0
+openpyxl==3.1.5
