--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pandas==2.2.3
 faker==30.8.2
 openai==1.54.3
 python-dotenv==1.0.1
-PyPDF2==3.0.1
+pypdf==5.1.0
 python-docx==1.1.2
 gunicorn==23.0.0
 openpyxl==3.1.5
